laborations/lab1/test/bad/bad062.cc
int foo() {
	while 1; return 2;
}
